--- a/DrawPadAndEPubReader_swift/Main.storyboard
+++ b/DrawPadAndEPubReader_swift/Main.storyboard
@@ -48,7 +48,7 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" verticalCompressionResistancePriority="749" image="mylogo" translatesAutoresizingMaskIntoConstraints="NO" id="kU8-ti-gHQ">
-                                <rect key="frame" x="87.5" y="94" width="200" height="90"/>
+                                <rect key="frame" x="88" y="94" width="200" height="90"/>
                                 <constraints>
                                     <constraint firstAttribute="width" constant="200" id="I1Y-Pl-IUz"/>
                                     <constraint firstAttribute="height" constant="90" id="bT0-Tu-WAc"/>
@@ -78,7 +78,7 @@
                                 </connections>
                             </button>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="hpk-UY-uwV" customClass="RaisedButton" customModule="Material">
-                                <rect key="frame" x="87.5" y="380" width="200" height="30"/>
+                                <rect key="frame" x="88" y="380" width="200" height="30"/>
                                 <constraints>
                                     <constraint firstAttribute="width" constant="200" id="Cbd-eo-l2C"/>
                                     <constraint firstAttribute="height" constant="30" id="XE2-eH-LHh"/>
@@ -89,7 +89,7 @@
                                 </connections>
                             </button>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="nau-fx-XF9" customClass="RaisedButton" customModule="Material">
-                                <rect key="frame" x="52.5" y="415" width="270" height="30"/>
+                                <rect key="frame" x="53" y="415" width="270" height="30"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="30" id="DLW-FG-4Vz"/>
                                     <constraint firstAttribute="width" constant="270" id="bRq-P9-tPw"/>
@@ -163,10 +163,10 @@
             </objects>
             <point key="canvasLocation" x="1076" y="558"/>
         </scene>
-        <!--Popover View Controller-->
+        <!--Draw Pad Right MenuVC-->
         <scene sceneID="SLk-3q-Ejm">
             <objects>
-                <viewController id="B0b-DB-5vg" customClass="PopoverViewController" customModule="DrawPadAndEPubReader_swift" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController id="B0b-DB-5vg" customClass="DrawPadRightMenuVC" customModule="DrawPadAndEPubReader_swift" customModuleProvider="target" sceneMemberID="viewController">
                     <layoutGuides>
                         <viewControllerLayoutGuide type="top" id="c2f-ep-50F"/>
                         <viewControllerLayoutGuide type="bottom" id="HDj-U3-C5E"/>
@@ -247,7 +247,7 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="5DU-xQ-Wv2">
-                                <rect key="frame" x="36" y="178.5" width="303" height="310"/>
+                                <rect key="frame" x="36" y="179" width="303" height="310"/>
                                 <subviews>
                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Select Color" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="4p8-m6-k7e">
                                         <rect key="frame" x="8" y="8" width="125" height="21"/>
@@ -282,7 +282,7 @@
                                         </cells>
                                     </collectionView>
                                     <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="FS4-CR-MMz">
-                                        <rect key="frame" x="121.5" y="260" width="60" height="30"/>
+                                        <rect key="frame" x="122" y="260" width="60" height="30"/>
                                         <constraints>
                                             <constraint firstAttribute="width" constant="60" id="zMG-zH-rPO"/>
                                         </constraints>
@@ -363,7 +363,7 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="e03-3y-osr">
-                                <rect key="frame" x="36" y="210.5" width="303" height="194"/>
+                                <rect key="frame" x="36" y="211" width="303" height="194"/>
                                 <subviews>
                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Change Brush Size" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="aQq-Nh-78V">
                                         <rect key="frame" x="8" y="8" width="174" height="21"/>
@@ -375,19 +375,19 @@
                                         <nil key="highlightedColor"/>
                                     </label>
                                     <slider opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" value="0.5" minValue="0.0" maxValue="1" translatesAutoresizingMaskIntoConstraints="NO" id="dwu-Jn-Rke">
-                                        <rect key="frame" x="6" y="62.5" width="291" height="32"/>
+                                        <rect key="frame" x="6" y="63" width="291" height="32"/>
                                         <connections>
                                             <action selector="changeBrushSize:" destination="f6b-5Q-AgV" eventType="valueChanged" id="ys9-bx-t1s"/>
                                         </connections>
                                     </slider>
                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="OBY-Ka-6Kj">
-                                        <rect key="frame" x="151.5" y="124" width="0.0" height="0.0"/>
+                                        <rect key="frame" x="152" y="124" width="0.0" height="0.0"/>
                                         <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                         <nil key="textColor"/>
                                         <nil key="highlightedColor"/>
                                     </label>
                                     <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="5HP-CA-maZ">
-                                        <rect key="frame" x="121.5" y="144" width="60" height="30"/>
+                                        <rect key="frame" x="122" y="144" width="60" height="30"/>
                                         <constraints>
                                             <constraint firstAttribute="width" constant="60" id="i6W-HN-eig"/>
                                         </constraints>
@@ -465,11 +465,11 @@
                                         <rect key="frame" x="0.0" y="22" width="315" height="54"/>
                                         <autoresizingMask key="autoresizingMask"/>
                                         <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="yZb-ht-97X" id="bBI-01-BT5">
-                                            <rect key="frame" x="0.0" y="0.0" width="315" height="53.5"/>
+                                            <rect key="frame" x="0.0" y="0.0" width="315" height="53"/>
                                             <autoresizingMask key="autoresizingMask"/>
                                             <subviews>
                                                 <label opaque="NO" multipleTouchEnabled="YES" contentMode="left" text="Title" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" id="0Ih-C7-WrK">
-                                                    <rect key="frame" x="15" y="0.0" width="285" height="53.5"/>
+                                                    <rect key="frame" x="15" y="0.0" width="285" height="53"/>
                                                     <autoresizingMask key="autoresizingMask"/>
                                                     <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                                     <nil key="textColor"/>
@@ -504,6 +504,65 @@
                 <placeholder placeholderIdentifier="IBFirstResponder" id="Bi6-8C-Rug" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="-482.39999999999998" y="1002.5487256371815"/>
+        </scene>
+        <!--Pub Right MenuVC-->
+        <scene sceneID="QGc-f9-xhD">
+            <objects>
+                <viewController storyboardIdentifier="EPubRightMenuVC" id="2Kc-7E-cxl" customClass="EPubRightMenuVC" customModule="DrawPadAndEPubReader_swift" customModuleProvider="target" sceneMemberID="viewController">
+                    <layoutGuides>
+                        <viewControllerLayoutGuide type="top" id="rvU-5L-GEQ"/>
+                        <viewControllerLayoutGuide type="bottom" id="gsg-Ab-HVF"/>
+                    </layoutGuides>
+                    <view key="view" contentMode="scaleToFill" id="Lht-DG-xtd">
+                        <rect key="frame" x="0.0" y="0.0" width="250" height="150"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="hvx-ih-bgh">
+                                <rect key="frame" x="16" y="20" width="218" height="30"/>
+                                <state key="normal" title="Table of Content"/>
+                                <connections>
+                                    <action selector="clickTOCBtn:" destination="2Kc-7E-cxl" eventType="touchUpInside" id="1hR-wj-9vb"/>
+                                </connections>
+                            </button>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="fuZ-UE-zhD">
+                                <rect key="frame" x="16" y="58" width="218" height="30"/>
+                                <state key="normal" title="Highlight List"/>
+                                <connections>
+                                    <action selector="clickHighlightListBtn:" destination="2Kc-7E-cxl" eventType="touchUpInside" id="Db7-H8-LzV"/>
+                                </connections>
+                            </button>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="ybT-iQ-ICl">
+                                <rect key="frame" x="16" y="96" width="218" height="30"/>
+                                <state key="normal" title="Font"/>
+                                <connections>
+                                    <action selector="clickFontBtn:" destination="2Kc-7E-cxl" eventType="touchUpInside" id="ZmU-B0-KHB"/>
+                                </connections>
+                            </button>
+                        </subviews>
+                        <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                        <constraints>
+                            <constraint firstItem="fuZ-UE-zhD" firstAttribute="trailing" secondItem="Lht-DG-xtd" secondAttribute="trailingMargin" id="8nf-CG-qLV"/>
+                            <constraint firstItem="fuZ-UE-zhD" firstAttribute="leading" secondItem="Lht-DG-xtd" secondAttribute="leadingMargin" id="Baa-DV-15r"/>
+                            <constraint firstItem="hvx-ih-bgh" firstAttribute="leading" secondItem="Lht-DG-xtd" secondAttribute="leadingMargin" id="FKo-hc-RpQ"/>
+                            <constraint firstItem="hvx-ih-bgh" firstAttribute="top" secondItem="rvU-5L-GEQ" secondAttribute="bottom" constant="20" id="Kvn-f6-yxE"/>
+                            <constraint firstItem="hvx-ih-bgh" firstAttribute="trailing" secondItem="Lht-DG-xtd" secondAttribute="trailingMargin" id="TbY-jC-8kO"/>
+                            <constraint firstItem="ybT-iQ-ICl" firstAttribute="centerX" secondItem="Lht-DG-xtd" secondAttribute="centerX" id="dly-ux-qe8"/>
+                            <constraint firstItem="fuZ-UE-zhD" firstAttribute="top" secondItem="hvx-ih-bgh" secondAttribute="bottom" constant="8" symbolic="YES" id="dq5-8u-lsd"/>
+                            <constraint firstItem="ybT-iQ-ICl" firstAttribute="trailing" secondItem="Lht-DG-xtd" secondAttribute="trailingMargin" id="eqt-BS-CTa"/>
+                            <constraint firstItem="ybT-iQ-ICl" firstAttribute="top" secondItem="fuZ-UE-zhD" secondAttribute="bottom" constant="8" symbolic="YES" id="gcd-Zu-u39"/>
+                            <constraint firstItem="hvx-ih-bgh" firstAttribute="centerX" secondItem="Lht-DG-xtd" secondAttribute="centerX" id="kTy-Bw-UAk"/>
+                            <constraint firstItem="fuZ-UE-zhD" firstAttribute="centerX" secondItem="Lht-DG-xtd" secondAttribute="centerX" id="lCN-dI-XX8"/>
+                            <constraint firstItem="ybT-iQ-ICl" firstAttribute="leading" secondItem="Lht-DG-xtd" secondAttribute="leadingMargin" id="pcl-5o-LVw"/>
+                        </constraints>
+                    </view>
+                    <value key="contentSizeForViewInPopover" type="size" width="250" height="150"/>
+                    <nil key="simulatedStatusBarMetrics"/>
+                    <freeformSimulatedSizeMetrics key="simulatedDestinationMetrics"/>
+                    <size key="freeformSize" width="250" height="150"/>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="IWj-NB-dNF" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="-1045" y="785"/>
         </scene>
     </scenes>
     <resources>
